--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/_config.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/_config.sass
@@ -52,7 +52,7 @@ $colorMainButton: #b95547
 $colorMainButtonHover: #953427
 $colorMainButtonActive: #7d2e21
 
-$buttonHeight: 55px
+$buttonHeight: rem(50)
 // secondary (success)
 $colorSecondaryButton: #2e4870
 $colorSecondaryButtonHover: #15315b
@@ -118,7 +118,7 @@ $fontBlack: 900
 // font size
 $fontSizeBase: 16px
 $fontSize-xs: fz(13)
-$fontSize-sm: fz(18)
+$fontSize-sm: fz(15)
 $fontSize-md: fz(20)
 $fontSize-lg: fz(26)
 $fontSizeH1: fz(35)
