--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/page/product/_product.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/page/product/_product.sass
@@ -43,7 +43,7 @@
     +flex
     font-weight: $fontBold
   &_actual
-    color: $colorMain
+    color: $p_choral
     margin-right: 35px
   &_old
     text-decoration: line-through
