--- a/catalog/view/theme/d_visualize/template/product/product.twig
+++ b/catalog/view/theme/d_visualize/template/product/product.twig
@@ -1,250 +1,5 @@
 {% extends template %}
-
 {% block content %}
-<div class="product-section">
-    <div class="row">
-        <div class="col-sm-12">
-            <h1 class="heading-h1">{{ heading_title }}</h1>
-        </div>
-        {% if column_left or column_right %}
-        <div class="col-sm-6">
-            {% else %}
-            <div class="col-sm-12 col-md-8">
-                {% endif %}
-
-                {% if thumb or images %}
-                    <div class="product-images">
-                        {% if thumb %}
-                            <a class="thumbnail thumbnail-main" href="{{ popup }}" title="{{ heading_title }}">
-                                <img src="{{ thumb }}" title="{{ heading_title }}" alt="{{ heading_title }}"/>
-                            </a>
-                        {% endif %}
-                        {% if images %}
-                            <div class="product-images_additional">
-                                {% for image in images %}
-                                    <a class="thumbnail" href="{{ image.popup }}" title="{{ image.heading_title }}">
-                                        <img src="{{ image.thumb }}" title="{{ image.heading_title }}"
-                                             alt="{{ image.heading_title }}"/>
-                                    </a>
-                                {% endfor %}
-                            </div>
-                        {% endif %}
-                    </div>
-                {% endif %}
-
-                <div class="col-sm-12 hidden-md hidden-lg product-info">
-                    {% if price %}
-                        <div class="product-price-block">
-                            <div class="price-label">Price:</div>
-                            {% if not special %}
-                                <span class="product-price product-price_actual like-heading-h3">{{ price }}</span>
-                            {% else %}
-                                <span class="product-price product-price_old like-heading-h3">{{ price }}</span>
-                                <span class="product-price product-price_actual">{{ special }}</span>
-                            {% endif %}
-                            {% if discounts %}
-                                {% for discount in discounts %}
-                                    <li>{{ discount.quantity }}{{ text_discount }}{{ discount.price }}</li>
-                                {% endfor %}
-                            {% endif %}
-                        </div>
-                    {% endif %}
-                    <div class="form-group">
-                        <input type="hidden" name="product_id" value="{{ product_id }}"/>
-                        <input type="hidden" name="quantity" value="{{ minimum }}" size="1" id="input-quantity"
-                               class="field"/>
-                        <button type="button" id="button-cart" data-loading-text="{{ text_loading }}"
-                                class="btn btn-primary btn-block">{{ button_cart }}</button>
-                    </div>
-                    {% if manufacturer %}
-                        <table class="product_attributes">
-                            <tr>
-                                <td class="product_attributes_name">Brand</td>
-                                <td class="product_attributes_value">{{ manufacturer }}</td>
-                            </tr>
-                        </table>
-                    {% endif %}
-                    {% if minimum > 1 %}
-                        <div class="alert alert-info"><i class="fa fa-info-circle"></i> {{ text_minimum }}</div>
-                    {% endif %}
-                    {% if review_status %}
-                        <div class="product-rating">
-                            {% include partial.d_rating.template with partial.d_rating %}
-                            <div class="review-link">
-                                <a href="" data-anchor="#reviews" class="link js-anchor">{{ reviews }}</a>
-                                / <a href="" data-anchor="#new-comment" class="link js-anchor">{{ text_write }}</a>
-                            </div>
-
-                        </div>
-                    {% endif %}
-                </div>
-
-                <div class="product-content">{{ description }}</div>
-                {% if review_status %}
-                    <div id="reviews" class="comments-section">
-                        <h2 class="like-heading-h5">Reviews</h2>
-                        <form class="form-horizontal" id="form-review">
-                            <div id="review" class="comments-list"></div>
-                            <div id="new-comment" class="new-comment">
-                                <h3 class="like-heading-h2">{{ text_write }}</h3>
-                                {% if review_guest %}
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <div class="form-group required">
-                                            <div class="col-sm-12">
-                                                <label class="field-label label-fluid"
-                                                       for="input-name">{{ entry_name }}</label>
-                                                <input type="text" name="name" value="" id="input-name"
-                                                       class="field"/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <div class="form-group required">
-                                            <div class="col-sm-12">
-                                                <label class="field-label label-fluid"><span>{{ entry_rating }}</span></label>
-                                                <div class="rating">
-                                                    <input type="hidden" id="review_rating" name="rating" data-start="0"
-                                                           data-stop="5"
-                                                           data-filled="fa fa-star fa-stack-2x, fa fa-star-o fa-stack-2x"
-                                                           data-empty="fa fa fa-star fa-2x">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group required">
-                                    <div class="col-sm-12">
-                                        <label class="field-label label-fluid"
-                                               for="input-review"><span>{{ entry_review }}</span></label>
-                                        <textarea name="text" rows="5" id="input-review"
-                                                  class="field field-area"></textarea>
-                                        <div class="help-block">{{ text_note }}</div>
-                                    </div>
-                                </div>
-                                {{ captcha }}
-                                <div class="buttons clearfix">
-                                    <div class="pull-right">
-                                        <button type="button" id="button-review"
-                                                data-loading-text="{{ text_loading }}"
-                                                class="btn btn-primary">{{ text_send }}</button>
-                                    </div>
-                                </div>
-                            </div>
-                            {% else %}
-                                {{ text_login }}
-                            {% endif %}
-                        </form>
-                    </div>
-                {% endif %}
-            </div>
-            {% if column_left or column_right %}
-            <div class="col-sm-6">
-                {% else %}
-                <div class="col-sm-4">
-                    <div id="product" class="product-info hidden-xs hidden-sm">
-                        {% endif %}
-                        {% if price %}
-                            <div class="product-price-block">
-                                <div class="price-label">Price:</div>
-                                {% if not special %}
-                                    <span class="product-price product-price_actual like-heading-h3">{{ price }}</span>
-                                {% else %}
-                                    <span class="product-price product-price_old like-heading-h3">{{ price }}</span>
-                                    <span class="product-price product-price_actual">{{ special }}</span>
-                                {% endif %}
-                                {% if discounts %}
-                                    {% for discount in discounts %}
-                                        <li>{{ discount.quantity }}{{ text_discount }}{{ discount.price }}</li>
-                                    {% endfor %}
-                                {% endif %}
-                            </div>
-                        {% endif %}
-
-                        <div class="form-group">
-                            <input type="hidden" name="product_id" value="{{ product_id }}"/>
-                            <input type="hidden" name="quantity" value="{{ minimum }}" size="1" id="input-quantity"
-                                   class="field"/>
-                            <button type="button" id="button-cart" data-loading-text="{{ text_loading }}"
-                                    class="btn btn-primary btn-block">{{ button_cart }}</button>
-                        </div>
-                        {% if manufacturer %}
-                            <table class="product_attributes">
-                                <tr>
-                                    <td class="product_attributes_name">Brand</td>
-                                    <td class="product_attributes_value">{{ manufacturer }}</td>
-                                </tr>
-                            </table>
-                        {% endif %}
-                        {% if minimum > 1 %}
-                            <div class="alert alert-info"><i class="fa fa-info-circle"></i> {{ text_minimum }}</div>
-                        {% endif %}
-
-                        {% if review_status %}
-                            <div class="product-rating">
-                                <div class="rating" style="cursor: default">
-                                    {% for i in 1..5 %}
-                                        {% if rating < i %}<span class="fa fa-stack"><i
-                                                    class="fa fa-star-o fa-stack-1x"></i></span>{% else %}<span
-                                                class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i
-                                                    class="fa fa-star-o fa-stack-1x"></i></span>{% endif %}
-                                    {% endfor %}
-                                </div>
-                                <div class="review-link">
-                                    <a href="" data-anchor="#reviews" class="link js-anchor">{{ reviews }}</a>
-                                    / <a href="" data-anchor="#new-comment" class="link js-anchor">{{ text_write }}</a>
-                                </div>
-
-                            </div>
-                        {% endif %}
-                    </div>
-                </div>
-            </div>
-            {% if products %}
-            <div class="h3">{{ text_related }}</div>
-            <div class="row">
-                {% for product in products %}
-                {% if column_left and column_right %}
-                <div class="col-xs-8 col-sm-6">
-                    {% else %}
-                    {% if column_left or column_right %}
-                    <div class="col-xs-6 col-sm-4">
-                        {% else %}
-                        <div class="col-xs-6 col-sm-3">
-                            {% endif %}
-                            {% endif %}
-                            {% include 'd_visualize/template/partial/d_product_thumb.twig' with product %}
-                        </div>
-                        {% endfor %}
-                    </div>
-                    {% endif %}
-
-                    {% if tags %}
-                        <p>{{ text_tags }}
-                            {% for tag in tags %}
-                                <a href="{{ tag.href }}">{{ tag.tag }}</a>
-                            {% endfor %}
-                        </p>
-                    {% endif %}
-
-                    <script type="text/javascript"><!--
-						$(document).ready(function () {
-							Product.init({
-								product_id: '{{ product_id }}',
-								$quantity: $('#input-quantity'),
-								minimum: '{{ minimum }}'
-							});
-
-							$('.js-anchor').click(function (e) {
-								e.preventDefault();
-								var moveTo = $(this).data('anchor');
-
-								$('html, body').animate({
-									scrollTop: $(moveTo).offset().top
-								}, 500);
-							});
-						});
-						//-->
-                    </script>
-    {% endblock %}
+    {% include components.product_section.template %}
+{% endblock %}
 
