--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/base/_typography.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/base/_typography.sass
@@ -20,29 +20,30 @@ body
   +mq('tablet')
     text-align: center
 
-h1
+h1 ,.heading-h1, .entry-description h1, .like-heading-h1
   font-size: $fontSizeH1
   word-spacing: $fontH1Spacing
   margin-bottom: rem(35px)
+  font-weight: $fontLight
   text-transform: uppercase
 
-h2
+h2 ,.heading-h2, .entry-description h2, .like-heading-h2
   font-size: $fontSizeH2
   word-spacing: $fontH2Spacing
-h3
+h3 ,.heading-h3, .entry-description h3, .like-heading-h3
   font-size: $fontSizeH3
   font-weight: $fontMedium
   word-spacing: $fontH3Spacing
   text-transform: uppercase
-h4
+h4 ,.heading-h4, .entry-description h4, .like-heading-h4
   font-size: $fontSizeH4
   line-height: lh($fontSizeH4,24)
-h5
+h5 ,.heading-h5, .entry-description h5, .like-heading-h5
   font-size: $fontSizeH5
   line-height: lh($fontSizeH5,21)
 span
-  font-size: $fontSize-xs
-  line-height: lh($fontSize-xs,22)
+  //font-size: $fontSize-sm
+  //line-height: lh($fontSize-xs,22)
 
 .section-heading,
 .sidebar-heading,
@@ -71,7 +72,7 @@ span
   margin-bottom: 40px
 
 .link
-  color: $colorMain
+  color: $p_choral
   text-decoration: underline
   font-size: fz(13px)
   border: none
