--- a/catalog/view/theme/d_visualize/stylesheet/skin/jag/stylesheet.sass
+++ b/catalog/view/theme/d_visualize/stylesheet/skin/jag/stylesheet.sass
@@ -6,6 +6,12 @@
 @import "config"
 @import "base/import"
 
+@import "misc/import"
+
 @import "placeholder/placeholder"
+@import "component/custom/import"
 @import "component/default/import"
 @import "layout/import"
+
+@import "page/import"
+@import "extension/import"
