--- a/catalog/view/theme/d_visualize/template/common/header.twig
+++ b/catalog/view/theme/d_visualize/template/common/header.twig
@@ -45,10 +45,13 @@
     {% for script in scripts %}
         <script src="{{ script }}" type="text/javascript"></script>
     {% endfor %}
+    <script src="catalog/view/theme/d_visualize/javascript/core/d_visualize.js" type="text/javascript"></script>
+
     <link rel="stylesheet" href="catalog/view/theme/d_visualize/stylesheet/core/stylesheet.css">
     {% for style in styles %}
         <link href="{{ style.href }}" type="text/css" rel="{{ style.rel }}" media="{{ style.media }}"/>
     {% endfor %}
+
     {% for custom_style in custom_styles %}
         <style>
             {{ custom_style }}
